############################################################
#
# $Id$
#
# Copyright (c) Spartion 2020
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( simageviewer )
